force-app/main/default/objects/ProjectContact__c/ProjectContact__c.object-meta.xml
<CustomObject>
    <label>Project Contact</label>
    <nameField>
        <displayFormat>ProjCntct{000000}</displayFormat>
        <label>Project Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>