force-app/main/default/objects/ProjectContact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project_Sponsor</fullName>
                <label>Project Sponsor</label>
            </value>
            <value>
                <fullName>Project_Lead</fullName>
                <label>Project Lead</label>
            </value>
            <value>
                <fullName>Tech_Resource</fullName>
                <label>Tech Resource</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>